--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fake-useragent": "^1.0.1",
     "file-type": "^16.2.0",
     "fluent-ffmpeg": "^2.1.2",
+    "jsdom": "^17.0.0",
     "lolis.life": "^4.0.0",
     "moment-timezone": "^0.5.32",
     "multistream": "^4.0.1",
@@ -35,7 +36,9 @@
     "remove.bg": "^1.3.0",
     "request": "^2.81.0",
     "spinnies": "^0.5.1",
-    "tiktok-scraper": "^1.4.7"
+    "tiktok-scraper": "^1.4.7",
+    "hxz-api": "^1.0.1",
+    "yt-search": "^2.7.6"
   },
   "devDependencies": {},
   "repository": {
