--- a/src/settings.json
+++ b/src/settings.json
@@ -1,10 +1,10 @@
 {
-	"ownerName": "Aprii",
-	"ownerNumber": "628811929177",
+	"ownerName": "Aikoo",
+	"ownerNumber": "6285162939092",
 	"apiKey": "udah gw kasih free tinggal make aja",
-	"dana": "08811929177",
-	"gopay": "081290995607",
-	"ovo": "08811929177",
-	"namabot": "BOT V3",
-	"fake": "_*BY APRILIA, KETIK .allmenu JIKA TIDAK ADA BUTTON*_"
+	"dana": "082393550677",
+	"gopay": "085299747072",
+	"ovo": "085299747072",
+	"namabot": "AIKO BOTZ",
+	"fake": "_*BY AIKO, KETIK .allmenu JIKA TIDAK ADA BUTTON*_"
 }
